--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,7 +9,7 @@ packages = [
 ]
 
 [tool.poetry.dependencies]
-python = "^3.10"
+python = ">=3.10,<3.12"
 flask = "^3.0.3"
 gunicorn = "^23.0.0"
 python-dotenv = "^1.0.1"
