--- a/.github/workflows/PyCi.yml
+++ b/.github/workflows/PyCi.yml
@@ -21,7 +21,7 @@ jobs:
       - name: Install dependencies
         run: |
           pip install poetry
-          make build
+          make install
       - name: Run linter
         run: |
           make lint
